--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "morgan"          : "1.3.2",
     "serve-favicon"   : "2.1.5",
     "serve-static"    : "1.6.3"
+  },
+  "scripts":{
+    "test":"echo 'OK'"
   }
 }
