--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ deploy:
     secure: RgukMU6pl8bF6vCxPm3LhpKfSpkxogSPGhsGlt4e6p9cTND2MAxCgg1UhHGSSUXPyIFpcolBAvSRTHMWcf6wBRTn6eYeSLbw8e8LhgprHrj3MC8tJC6kenwSLU6wfSitPOeCPKGj+vv4oHx1xS7lMZEstK/GLo9CS4XiGSrGUkI=
   app:
     master: tp-p2018
-    develop: tp-p2018-staging
+    heroku: tp-p2018-staging
