--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: node_js
 sudo: false
 node_js:
-  - "0.10"
+- '0.10'
 install:
 - npm install
 script:
 - npm test
+deploy:
+  provider: heroku
+  api_key:
+    secure: PY/l5tGasPY/u0LLzupl7/971AdSWjnKtnyHdUOZ3uFkuHvFJ+KGENsoaoozxBUDtTcZID0lXRTo/9u7J845+oJ2pcOMNm93P/6xuaX2PHpdjKoRG2Malb0r4O8nBsanf5YZt9GOwPCpbxmuJ0EkVBqUluFbyDziSiK2i/JTpfY=
+  app:
+    develop: tp-p2018-staging
+    master: tp-p2018
